# slate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  EPIC_9_SAAS_ADMIN.md  README.md  TESTING.md  build.rs  docker-compose.dev.yml  docker-compose.yml
config/: loki.yaml  (+7 more)
libs/common-rust/: Cargo.toml  README.md
libs/common-rust/src/: lib.rs
libs/common-rust/src/circuit_breaker/: breaker.rs  mod.rs  tests.rs  types.rs
libs/common-rust/src/error/: mod.rs  trace.rs  types.rs
libs/common-rust/src/health/: checker.rs  mod.rs  types.rs
libs/common-rust/src/observability/: interceptor.rs  json_formatter.rs  logging.rs  mod.rs  tracing_utils.rs
libs/common-rust/src/rate_limit/: constants.rs  limiter.rs  mod.rs  tests.rs  types.rs
libs/common-rust/src/retry/: config.rs  logic.rs  mod.rs
services/api-gateway/: .dockerignore  BENCHMARK_RESULTS.md  Cargo.toml  DOCKER.md  Dockerfile  GRPC_NAMING_CONVENTION.md  README.md  ROUTE_OVERRIDE_ANALYSIS.md  TEST_COVERAGE_TASK_20.md  build.rs
services/api-gateway/benches/: routing_bench.rs
services/api-gateway/openapi/: README.md  openapi.yaml
services/api-gateway/openapi/paths/: README.md  assignments.yaml  auth-oauth.yaml  auth-saml.yaml  auth.yaml  content-lessons.yaml  content-modules.yaml  content-progress.yaml  content-resources.yaml  content-search.yaml  content-streaming.yaml  content-upload.yaml  course-co-instructors.yaml  course-prerequisites.yaml  course-templates.yaml  courses.yaml  enrollments.yaml  gradebook.yaml  grading.yaml  groups.yaml  mfa.yaml  parent-child.yaml  profile.yaml  roles.yaml  submissions.yaml  users.yaml
services/api-gateway/openapi/schemas/: README.md  assignment-grading-schemas.yaml  content-management-schemas.yaml  user-auth-schemas.yaml
services/api-gateway/src/: db.rs  lib.rs  main.rs  proto.rs  response.rs
services/api-gateway/src/app/: mod.rs  routes.rs  server.rs  telemetry.rs
services/api-gateway/src/auth/: constants.rs  middleware.rs  mod.rs  service.rs  tests.rs  types.rs
services/api-gateway/src/circuit_breaker/: breaker.rs  mod.rs  tests.rs  types.rs
services/api-gateway/src/config/: constants.rs  loader.rs  mod.rs  tests.rs  types.rs
services/api-gateway/src/converter/: grpc_to_http.rs  http_to_grpc.rs  mod.rs  tests.rs  types.rs
services/api-gateway/src/discovery/: constants.rs  conventions.rs  metrics.rs  mod.rs  override_handler.rs  reflection.rs  service.rs  types.rs  validator.rs
services/api-gateway/src/docs/: mod.rs
services/api-gateway/src/grpc/: client.rs  constants.rs  dynamic_client.rs  mod.rs  pool.rs  tests.rs  types.rs
services/api-gateway/src/handlers/: admin.rs  constants.rs  error.rs  error_mapping.rs  gateway.rs  mod.rs  tests.rs  types.rs  user_service.rs
services/api-gateway/src/health/: checker.rs  handler.rs  mod.rs  tests.rs  types.rs
services/api-gateway/src/middleware/: body_limit.rs  client_ip.rs  cors.rs  mod.rs
services/api-gateway/src/observability/: json_formatter.rs  mod.rs  tracing_utils.rs
services/api-gateway/src/rate_limit/: constants.rs  limiter.rs  mod.rs
services/api-gateway/src/router/: decision.rs  matcher.rs  mod.rs  pattern.rs  tests.rs
services/api-gateway/src/security/: mod.rs  validator.rs
services/api-gateway/src/shared/: state.rs
services/api-gateway/tests/: auth_middleware_test.rs  circuit_breaker_states_test.rs  circuit_breaker_timeout_test.rs  config_test.rs  connection_pool_test.rs  conventions_test.rs  error_mapping_test.rs  error_type_property_test.proptest-regressions  error_type_property_test.rs  health_check_test.rs  integration_test.rs  no_panics_property_test.proptest-regressions  no_panics_property_test.rs  override_test.rs  proto_test.rs  public_function_documentation_property_test.proptest-regressions  public_function_documentation_property_test.rs  public_type_documentation_property_test.rs  rate_limiter_load_test.rs  reflection_test.rs  result_type_property_test.proptest-regressions  result_type_property_test.rs  router_test.rs  security_test.rs  tracing_test.rs  user_auth_integration_test.rs  user_service_methods_test.rs  validator_test.rs
services/content-management-service/: .env.example  .gitignore  CONFIG.md  CONFIGURATION_IMPLEMENTATION.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.yaml
services/content-management-service/migrations/: 20250113000001_create_modules.sql  20250113000002_create_lessons.sql  20250113000003_create_resources.sql  20250113000004_create_upload_sessions.sql  20250113000005_create_progress_tracking.sql  20250113000006_create_transcoding_jobs.sql  20250113000007_create_download_tracking.sql  20250113000008_add_lesson_id_to_upload_sessions.sql
services/content-management-service/src/: circuit_breaker.rs  error.rs  health.rs  health_server.rs  lib.rs  main.rs  retry.rs
services/content-management-service/src/analytics/: errors.rs  events.rs  mod.rs  publisher.rs
services/content-management-service/src/config/: mod.rs
services/content-management-service/src/content/: errors.rs  manager.rs  mod.rs
services/content-management-service/src/db/: mod.rs  pool.rs
services/content-management-service/src/download/: errors.rs  manager.rs  mod.rs
services/content-management-service/src/grpc/: content_service.rs  download_service.rs  mod.rs  progress_service.rs  search_service.rs  streaming_service.rs  upload_service.rs
services/content-management-service/src/models/: download_tracking.rs  lesson.rs  mod.rs  module.rs  progress.rs  resource.rs  transcoding_job.rs  upload_session.rs
services/content-management-service/tests/: README.md  config_test.rs  content_manager_test.rs  database_integration_test.rs  end_to_end_test.rs  error_mapping_test.rs  minio_integration_test.rs  progress_tracker_test.rs  upload_handler_test.rs  validator_test.rs
services/video-conferencing-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
services/video-conferencing-service/migrations/: 001_init_video_conferencing.sql
services/video-conferencing-service/src/: lib.rs  main.rs
(+588 files in other folders)
