[package]
name = "axum-grafana-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.29.0" }
tracing-opentelemetry = "0.30.0"
anyhow = "1.0.75"
prometheus = "0.14"
tower-http = { version = "0.6.6", features = ["trace"] }
time = "0.3.44"
serde = { version = "1.0.228", features = ["derive"] }
mongodb = { version = "3.3.0", features = ["sync"] }
