[package]
name = "common-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime (from api-gateway versions)
tokio = { version = "1.48.0", features = ["sync", "time"] }

# Tracing
tracing = "0.1.41"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Rate limiting
lru = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
time = "0.3.44"

# Optional: OpenTelemetry (from api-gateway versions)
opentelemetry = { version = "0.29.0", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.29.0", optional = true }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"], optional = true }

# Optional: gRPC
tonic = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }

# Optional: HTTP
axum = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }

[features]
default = ["observability"]
observability = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
grpc = ["tonic", "hex"]
http = ["axum"]
full = ["observability", "grpc", "http"]
