[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.29.0" }
tracing-opentelemetry = "0.30.0"
anyhow = "1.0.75"
prometheus = "0.14"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
time = "0.3.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "3.3.0", features = ["sync"] }
urlencoding = "2.1"

# gRPC dependencies
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
tower = "0.5"
thiserror = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.5"

# Configuration
config = "0.14"
serde_yaml = "0.9"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Metrics
lazy_static = "1.4"

# LRU cache for rate limiter
lru = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "routing_bench"
harness = false
