[package]
name = "content-management-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# S3 client
aws-config = "1.1"
aws-sdk-s3 = "1.13"
aws-credential-types = "1.1"

# ElasticSearch
elasticsearch = "9.1.0-alpha.1"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.23"
prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
dotenv = "0.15"
mime = "0.3"
bytes = "1.5"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
