[package]
name = "video-conferencing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# WebRTC
webrtc = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"

# OpenTelemetry
opentelemetry = { version = "0.29", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.29", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "metrics", "grpc-tonic"] }

# Prometheus metrics
prometheus = "0.14"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and security
jsonwebtoken = "9.3"
sha2 = "0.10"
hex = "0.4"

# Google Cloud Storage
google-cloud-storage = "0.22"
google-cloud-auth = "0.18"

# Calendar generation (iCalendar)
icalendar = "0.16"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
